src/app/pages/main-page/main-page.component.scss
:host {
  display: flex;
  gap: 4rem;
  padding: 4rem;
  flex-grow: 1;
  justify-content: center;
}

.navigation {
  height: 100%;
  width: 25rem;
  flex-shrink: 0;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  align-items: flex-end;

  &__toggle {
    display: none;
    align-items: center;
    justify-content: center;
    padding: calc((4rem - 1.2rem)/2); // Match header height
    margin-bottom: 1rem;
    user-select: none;
    background-color: var(--header-footer-color);
    transition: background-color 150ms ease-in-out;
    border-bottom-left-radius: .3rem;

    &--active {
      background-color: var(--primary-color);

      img {
        filter: invert(1);
      }

      & ~ .navigation__content {
        display: block;
      }
    }

    img {
      height: 1.2rem;
      transition: filter 150ms ease-in-out;
    }
  }
}

.content {
  flex-grow: 1;
  // Text can get a bit hard to read otherwise, when spread out too widely...
  max-width: 850px;

  &__error {
    $padding: 1.5rem;

    border-radius: .5rem;
    border: 2px solid var(--highlight-warning-color);
    background-color: var(--highlight-warning-color--o);
    padding: $padding;
    padding-top: 4rem;
    position: relative;

    &::before {
      position: absolute;
      content: 'Request Error';
      top: $padding;
      left: $padding;
      font-weight: bold;
      font-size: 1.3rem;
    }
  }
}

@media print {
  .navigation {
    display: none;
  }
}

@media only screen and (max-width: 1400px) {
  :host {
    flex-direction: column;
    align-items: center;
    padding: 2rem 1rem;
    gap: 2rem;
  }

  .content {
    width: 100%;
  }

  .navigation {
    position: fixed;
    inset: 0 0 auto auto;
    height: max-content;
    width: max-content;

    &__toggle {
      display: inline-flex;
    }

    &__content {
      max-height: 70vh;
      overflow-y: scroll;
      background-color: transparentize($color: #000, $amount: .2);
      padding: 1rem;
      max-width: max-content;
      width: 100%;
      border-radius: .3rem;
      display: none;
    }
  }
}

